# study

./: .gitignore  README.md  pz_coord_templ_for_practice.ipynb  pz_sst_example_for_practice.ipynb
c_plus_plus/reversi/: chip.cc  chip.h  client.cc  client.h  field.h  image.h  log.h  singleton.h  text.h  window.cc
c_plus_plus/solitaire/: Makefile
comp_gr/: 2_6.c  2_6_1.c  2_6_2.c  2_6_3.c  3_5.c  3_8.c  Makefile  README.md  u2_1.c  u2_16.c  u2_1_1.c  u2_6.c
cpp/: README.md
cpp/calc/: Makefile  arithm.cpp  arithm.h  driver.cpp  driver.h  error.h  (+8 more)
network/async_server/: CMakeLists.txt  README.md
network/async_server/src/: config.cpp  config.h  config.txt  main.cpp  server.cpp  server.h
network/sync_client/: CMakeLists.txt  README.md  run_clients.sh
network/sync_client/src/: client.cpp  client.h  main.cpp
opengl/: Makefile  README.md  pr12.c  pr13.c  pr210.c  pr211.c  pr213.c  pr23.c  pr25.c  pr26.c  pr27.c  pr31.c  pr32.c  pr35.c  pr36.c  pr37.c
script/: arhiv_flash.sh  data_vr.sh  pr10_22.sh  pr10_24.sh  pr10_27.sh  pr10_28.sh  pr10_29.sh  pr10_5.sh  pr11_13.sh  pr11_17.sh  pr11_4.sh  pr11_5.sh  pr12_17.sh  pr12_18.sh  pr12_18_1.sh  pr12_21.sh  pr12_31.sh  pr12_8.sh  pr12_9.sh  pr17_5.sh  pr25_3.sh  pr25_4.sh  pr25_6.sh  pr25_7.sh  pr33_10.sh  pr3_1.sh  pr3_3.sh  pr7_1.sh  pr7_6.sh  pr8_2.sh  pr9_1.sh  pr9_10.sh  pr9_15.sh  pr9_23.sh  pr9_24.sh  pr9_25.sh  pr9_25_1.sh  pr9_26.sh  pr9_27.sh  pr9_6.sh  (+24 more)
terminal/: README.md  chart.cpp  chart.h  main.cpp  terminal.cpp  terminal.h  terminal.pro  terminal.ui
weather_satellites/: pz_coord_example.ipynb
(+10 files in other folders)
